@@ -1,3 +1,9 @@
+2011-09-15  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50365
+	* parser.c (cp_parser_late_return_type_opt): Check quals parameter
+	for clearing current_class_ptr, too.
+
 2011-09-14   Diego Novillo  <dnovillo@google.com>
 
 	* name-lookup.c (lookup_arg_dependent): Use conditional
